--- a/doc/src/manual/ch-simple-modules.tex
+++ b/doc/src/manual/ch-simple-modules.tex
@@ -2794,12 +2794,18 @@ from \ttt{check\_and\_cast}.
 
 The second issue is how to let the simulation kernel know that
 a method call across modules is taking place. Why is this necessary
-in the first place? If the simulation FIXME
+in the first place? The simulation kernel always has to know which
+module's code is currently executing, in order to several internal
+mechanisms to work correctly. (One such mechanism is ownership handling.)
+Another reason is that the Tkenv simulation GUI can animate
+method calls, but to be able to do that, it has to know about them.
 
 The solution is to add the \ttt{Enter\_Method()} or \ttt{Enter\_Method\_Silent()}
 macro at the top of the methods that may be invoked from other
-modules. These calls perform context switching, and notify the simulation
-GUI so that animation of the method call can take place.
+modules. These calls perform context switching, and, in case of
+\ttt{Enter\_Method()}, notify the simulation GUI so that animation
+of the method call can take place. \ttt{Enter\_Method\_Silent()}
+does not animate the call.
 
 \begin{verbatim}
 void Callee::doSomething()
