*** empty log message ***

--- a/doc/src/manual/usman-bibl.bib
+++ b/doc/src/manual/usman-bibl.bib
@@ -286,7 +286,51 @@
     note = "Author's page is a great source of information, see http://random.mat.sbg.ac.at/"
 }
 
+%%
+%% Parsim
+%%
 
+@Misc{lammpi,
+  title =	{{LAM-MPI} home page},
+  howpublished = {http://www.lam-mpi.org/},
+}
+
+@Misc{quadrics,
+  title =	{Quadrics home page},
+  howpublished = {http://www.quadrics.com/},
+}
+
+@article{bagrodia00,
+  author =	 {R.~L.~Bagrodia and M.~Takai},
+  title =	 {Performance Evaluation of Conservative Algorithms in
+                  Parallel Simulation Languages},
+  year =	 {2000},
+  journal =	 ITPDS,
+  pages =	 {395--414},
+  number =	 {4},
+  url =		 {citeseer.nj.nec.com/bagrodia98performance.html},
+  volume =	 {11}
+}
+
+@article{mpiforum94,
+  key = {MPI},
+  pages = {165-414},
+  volume = {8},
+  number = {3/4},
+  title = {{MPI}: A Message-Passing Interface Standard},
+  year = {1994},
+  journal = IJSA,
+  note = {Message Passing Interface Forum},
+}
+
+@InProceedings{ongfarrell2000,
+  author =	 {Hong Ong and Paul A. Farrell},
+  title =	 {Performance comparison of {LAM/MPI}, {MPICH} and {MVICH} on a
+  		  {Linux} cluster connected by a {Gigabit Ethernet} network},
+  year =	 {2000},
+  booktitle =	 {Proceedings of the 4th Annual Linux Showcase \& Conference, Atlanta, October 10-14, 2000},
+  organization = {The USENIX Association},
+}
 
 %%% Local Variables:
 %%% mode: latex
