*** empty log message ***

--- a/doc/src/manual/usman-bibl.bib
+++ b/doc/src/manual/usman-bibl.bib
@@ -290,6 +290,16 @@
 %% Parsim
 %%
 
+@article{chandymisra79,
+    author = "M. Chandy and J. Misra",
+    title = "Distributed simulation: A case study in design and verication of distributed programs",
+    journal = "IEEE Transactions on Software Engineering SE-5",
+    number = "5",
+    pages = "440-452",
+    year = "1979",
+    url = "http://citeseer.nj.nec.com/context/58222/0"
+}
+
 @Misc{lammpi,
   title =	{{LAM-MPI} home page},
   howpublished = {http://www.lam-mpi.org/},
