--- a/doc/src/manual/usman.tex
+++ b/doc/src/manual/usman.tex
@@ -25,8 +25,6 @@
 \renewcommand{\topfraction}{0.9}
 \renewcommand{\floatpagefraction}{0.9}
 
-
-
 %% try to cure overfull hboxes
 %% \tolerance=500
 
@@ -74,6 +72,9 @@
 
 \newcommand{\omnest}{OMNEST}
 
+%%
+%% *** CHECK SETTING BELOW BEFORE RELEASES *** 
+%%
 %\newcommand{\opp}{\omnest}
 \newcommand{\opp}{\omnetpp}
 
