--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,5 @@
+2004-12-29  ------ omnetpp-3.0 released ------
+
 2004-12-14  Andras Varga
 
 	* auto-adjust parent module size when submodules are drawn/moved
