--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2004-12-29  ------ omnetpp-3.0 released ------
+
 2004-12-06  Andras Varga
 
 	* ned.y: negative int or real constants were parsed as -1*x, which 
