--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,5 @@
+2004-12-29  ------ omnetpp-3.0 released ------
+
 2004-12-10  Andras Varga
 
 	* cnednetworkbuilder.cc/.h: several fixes in expression evaluation code
