--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-07  Andras Varga
+
+	* cdispstr.cc: getTagArg(): fixed to never return NULL (returns ""
+	instead)
+
 2005-01-02  Andras Varga
 
 	* cstruct.cc: fix: cStructDescriptor ctor crashed if NULL pointer was
