--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-10  Andras Varga
+
+	* cmdenv.cc: factored out platform dependencies to include/platdep
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 004-12-15  Andras Varga
