--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-10  Andras Varga
+
+	* cfilecomm.cc: factored out platform dependencies to include/platdep
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 2004-12-13   Andras Varga
