--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-10  Andras Varga
+
+	* tkapp.cc, tkcmd.cc: factored out platform dependencies to 
+	include/platdep
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 2004-12-15  Andras Varga
