--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-10  Andras Varga
+
+	* cscheduler.cc: added cRealTimeScheduler implementation
+
 2005-01-07  Andras Varga
 
 	* cdispstr.cc: getTagArg(): fixed to never return NULL (returns ""
