--- a/src/plove/ChangeLog
+++ b/src/plove/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-17  Andras Varga
+
+	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
+	[suggested by Michael Tuexen]
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 2004-11-23  ------ omnetpp-3.0b1 released ------
