--- a/src/scalars/ChangeLog
+++ b/src/scalars/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-17  Andras Varga
+
+	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
+	[suggested by Michael Tuexen]
+
+	* Makefile.in: "make clean" didn't delete engine/*.o [from Michael 
+	Tuexen]
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 2004-11-23  ------ omnetpp-3.0b1 released ------
