*** empty log message ***

--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -335,7 +335,7 @@ of random numbers. This is a useful property and of great importance,
 because it makes simulation runs repeatable.
 
 RNGs produce uniformly distributed integers in some range,
-usually between 0 or 1 and $2^{32}$ or so. Matematical transformations
+usually between 0 or 1 and $2^{32}$ or so. Mathematical transformations
 are used to produce random variates from them that correspond to
 specific distributions.
 
@@ -346,7 +346,7 @@ specific distributions.
 \subsubsection{Mersenne Twister}
 
 By default, {\opp} uses the Mersenne Twister RNG (MT) by M. Matsumoto and
-T. Nishimura \cite{Matsumoto98}. MT has a period of $2^19937-1$,
+T. Nishimura \cite{Matsumoto98}. MT has a period of $2^{19937}-1$,
 and 623-dimensional equidistribution property is assured. MT is
 also very fast: as fast or faster than ANSI C's \ttt{rand()}.
 
