--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-06  Andras Varga
+
+	* gateinsp.tcl, modinsp.cc: fixed cGate inspector error introduced 
+	in 3.0
+
 2005-01-17  Andras Varga
 
 	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
