--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-06  Andras Varga
+
+	* cnednetworkbuilder.cc/.h: implemented "connections nocheck"
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 2004-12-10  Andras Varga
