--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -4,6 +4,9 @@
 	instead of the string itself. (char buf[20]; strcpy(buf,"hello");
 	cout << buf; prints buf's address not "hello"!!!)
 
+	* cenvir.cc: fixed crash caused by writing one char past the
+	end of char buffer[1024] in cEnvir::gets().
+
 2005-02-07  Andras Varga
 
 	* cakaroarng.cc: fix: added missing #include
