--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-02  Andras Varga
+
+	* tkapp.h/cc: makeOptionsEffective() merged into readPerRunOptions()
+
 2005-02-07  Andras Varga
 
 	* enhancement: in omnetpp.ini, description="some text" entries can be 
