--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-03  Andras Varga
+
+	* structinsp.cc: fix: Tkenv crashed if control info object didn't have
+	cStructDescriptor registered [reported by Kurtis Kredo II]
+
 2005-03-02  Andras Varga
 
 	* tkapp.h/cc: makeOptionsEffective() merged into readPerRunOptions()
