--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-03  Andras Varga
+
+	* opp_nmakemake: implemented -X (ignore subdirectory) option
+
 2004-12-29  ------ omnetpp-3.0 released ------
 
 2004-12-10  Andras Varga
