*** empty log message ***

--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,6 +1,6 @@
 2005-03-03  Andras Varga
 
-	* opp_nmakemake: implemented -X (ignore subdirectory) option
+	* opp_makemake, opp_nmakemake: implemented -X (ignore subdirectory) option
 
 2004-12-29  ------ omnetpp-3.0 released ------
 
