--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-11  Andras Varga
+
+	* opp_msgc: fix: with customize=true, opp_msgc generates a comment in 
+	the .h file containing the minimum code the user has to write -- dup() 
+	in that code was missing const modifier [reported by Kurtis Kredo]
+
 2005-03-02  Andras Varga
 
 	* nedc removed (replacement is nedtool)
