--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-17  Andras Varga
+
+	* cscheduler.h: added method executionResumed() to cScheduler and
+	cRealtimeScheduler
+
 2005-03-15  Andras Varga
 
 	* cexception.h: added cRuntimeError
