added inifile->getBaseDirectoryFor(); fixed debug-on-errors bug

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-18  Andras Varga
+
+	* cconfig.h: added getBaseDirectoryFor() and getLocation() functions 
+	to cConfiguration
+
 2005-03-17  Andras Varga
 
 	* cscheduler.h: added method executionResumed() to cScheduler and
