--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-19  Andras Varga
+
+	* cdispstr.cc: fixed incorrect handling of terminating stray backlash
+	during parsing
+
 2005-03-18  Andras Varga
 
 	* added cstrtokenizer.cc
