--- a/test/tkenv/displaystring/README
+++ b/test/tkenv/displaystring/README
@@ -3,7 +3,8 @@ Model for testing of display string features.
 
 Does not (yet) test a bunch of features such as:
 - background border and fill
-- rectangle border and fill
+- rectangle border and fill; 
+- ovals
 - queue length display (q=), transmission range display (r=)
 - icon coloring
 - bubble()
